[package]
name = 'hashname'
version = '0.1.0'
edition = '2021'

[dependencies]
argparse = '0.2.2'
sha256 = '1.1.4'
rayon = '1.7.0'

[profile.release]
opt-level = 3
debug = false
rpath = true
lto = true
debug-assertions = false
codegen-units = 16
panic = 'abort'
incremental = false
overflow-checks = false
strip = 'symbols'
